--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "nestjs": "^0.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "@nestjs/mongoose": "^11.0.2"
+    "@nestjs/mongoose": "^11.0.2",
+    "@nestjs/typeorm": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
