--- a/backend/package.json
+++ b/backend/package.json
@@ -23,12 +23,13 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
-    "nestjs": "^0.0.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
     "@nestjs/mongoose": "^11.0.2",
-    "@nestjs/typeorm": "^11.0.0"
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "nestjs": "^0.0.1",
+    "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
