feat: conected frontend and backend for authentication

--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "nestjs": "^0.0.1",
     "pg": "^8.14.1",
@@ -50,6 +51,8 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
