--- a/AtopiCare/package.json
+++ b/AtopiCare/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -42,7 +42,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2"
+    "expo-linear-gradient": "~14.0.2",
+    "axios": "1.7.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
