--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "mongoose": "^8.12.1",
     "nestjs": "^0.0.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
