--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^8.12.1",
     "nestjs": "^0.0.1",
     "pg": "^8.14.1",
+    "react-native": "^0.78.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.21"
