--- a/backend/package.json
+++ b/backend/package.json
@@ -31,8 +31,10 @@
     "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "nestjs": "^0.0.1",
+    "openai": "^4.89.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
