--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "nestjs": "^0.0.1",
     "openai": "^4.89.0",
     "pg": "^8.14.1",
