--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,11 @@
     "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "nestjs": "^0.0.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
@@ -51,6 +53,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
