--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,6 @@
     "@nestjs/mongoose": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-navigation/native": "^7.0.17",
-    "@react-navigation/stack": "^7.2.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -43,13 +40,11 @@
     "nestjs": "^0.0.1",
     "openai": "^4.89.0",
     "pg": "^8.14.1",
-    "react-native": "^0.78.1",
-    "react-native-async-storage": "^0.0.1",
-    "react-native-vector-icons": "^10.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.21",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@aws-sdk/client-s3": "^3.772.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
